# Qdrant-Database

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  RUNBOOK.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/core/: logging.py  metrics.py  metrics_recorders.py  middleware.py  timing.py  urls.py  views.py
apps/documents/: admin.py  exceptions.py  models.py  serializers.py  urls.py  views.py
apps/grpc_service/: apps.py  handler.py  server.py
apps/ingestion/: _warmup.py  apps.py  chunker.py  embedder.py  locks.py  payload.py  pipeline.py
apps/qdrant_core/: apps.py  client.py  collection.py  exceptions.py  naming.py  search.py
apps/tenants/: admin.py  models.py  validators.py
build_prompts/phase_1_foundation/: 01_plan.md  02_review.md  03_implement.md  fix_plan.md  fix_plan_review.md  fix_report.md  implementation_report.md  plan.md  plan_review.md  spec.md
config/: celery.py  settings.py  urls.py
deploy/: qdrant-rag.service
proto/: search.proto
scripts/: backup_postgres.sh  bootstrap.sh  compile_proto.sh  load_test.py  snapshot_qdrant.sh  verify_setup.py
tests/: conftest.py  test_chunker.py  test_delete.py  test_embedder.py  test_embedder_warmup.py  test_grpc_shutdown.py  test_healthz.py  test_locks.py  test_models.py  test_naming.py  test_observability.py  test_payload.py  test_pipeline.py  test_qdrant_client.py  test_qdrant_collection.py  test_search_grpc.py  test_search_http.py  test_search_query.py  test_search_runtime.py  test_settings.py  test_upload.py
(+84 files in other folders)
